#
# $Id$
#

2.1.r1 -
======

- Updated for P12 version of NWS master host
- Added [-s] to logrotate in scheduler.conf
- Revised nbspmtr plot scripts and tclhttpd metar functions to
  plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
- Added -r and -R options to the nbspmtrplot1 script.
- Text files are filetered through tr in (qrunner) to delete cntrl chars.
- Added option(s) to set servername to the wildcard address(es).

2.1.2p3 -

- Corrected setting of PATH in filters.conf (from configure.inc and Makefile)
- Added KGGE (SC) to metar stations (icao and st files. Scott Shoemaker)
- Added linespoints style (ls) keywords to gnuplot templates in metarfilter
- Revised msgfilter: convert crlf -> nl, corrected REAME, added options
  for smtp when needed. Revised specification to allow
  <prod_regex><site_regexp> in addition to the old <prod_regex>_<zone_regexp>.

2.1.2p4 -
- Corrected output of /_iemwin/stats?format=csv

2.1.2p6 -
- Revised panfilter to send the meta data in lower case.
- Revised how the txtflag is set, It used to be based on just whether the
  header was text without looking at the body. Now it looks in the body.
- Revised how rssfilter(hostport) is defined in rssfilter

2.1.2r - released

2.1.3p1
-
- Revised msgfilter because with the tcl mime-smtp package the sms to
  mobile devices was not working correctly.