@@ -3,7 +3,7 @@
 #
 
 # All in one line (always end in ';')
-smtp://7877589734@att.net (svs|tor)_txz14[5-9],svr_vaz014,cwf_amz7[0-4]0 S;
+smtp://7873867474@att.net (svs|tor)_txz14[5-9],svr_vaz014,cwf_amz7[0-4]0 S;
 
 # Split accross several lines
 smtp://nieves@noaaport.net
