@@ -19,7 +19,7 @@ lappend subscribers {
 # Example for sending the summary (S flag)
 #
 lappend subscribers {
-	smtp://7877589734@cingularme.com
+	smtp://7873467474@cingularme.com
 	(svs|tor)_txz14[5-9],svr_vaz014,npw_txz25[2-7]
 	S
 }
