@@ -4,8 +4,8 @@
 #
 package require fileutil;
 package require textutil;
-## package require mime;
-## package require smtp;
+package require mime;
+package require smtp;
 
 ## The common defaults
 set _defaultsfile "/usr/local/etc/npemwin/filters.conf";
@@ -34,9 +34,9 @@ set msgfilter(ugczones)  [file join $gf(confdir) "msgfilter-ugczones.def"];
 # Configuration variables
 #
 set msgfilter(smtp,originator) "npemwin@localhost";
-set msgfilter(smtp,options) [list]; # for other options (if needed)
-## set msgfilter(smtp,servers) "localhost";
-
+set msgfilter(smtp,servers)    "localhost";
+set msgfilter(smtp,options) [list]; # for other options (if needed) such as
+                                    # -username <u> -password <p> ...
 #
 # The priority may be specified as a ``facility.level'' pair.
 # For example, ``local3.info'' logs the message as informational
@@ -130,10 +130,8 @@ proc process {prodname fpath} {
     # products and zone regexes, or product and site regexes
     #
     #     <prod_regex1>_<zone_regex1>,<prod_regex2>_<zone_regex2>,...
-    #
     # or
-    #
-    #     <prod_regex1><site_regex1>,<prod_regex2><site_regex2>,...
+    #     <prodname_regex1>,<prodname_regex2>,...
     #
     # The two forms can be mixed in the comma-separated list.
 
@@ -155,7 +153,7 @@ proc process {prodname fpath} {
 		if {$s_zone_code_regex eq ""} {
 	 	    #
 		    # The spec is <prod><site> without zones, and in this case
-	 	    # the match is tried with the awips code.
+	 	    # the match is tried with the prodname code.
 		    #
 		    set match [regexp $s_prod_code_regex $prod_site_code];
 		} else {
@@ -171,7 +169,6 @@ proc process {prodname fpath} {
 	}
     }
     foreach key [array names sendtolist] {
-
 	set t [lindex [split $key ","] 0];
 	set f [lindex [split $key ","] 1];
 	msgfilter_dispatch $t $f $sendtolist($key) \
@@ -182,7 +179,7 @@ proc process {prodname fpath} {
 proc msgfilter_dispatch {transport flags recipients \
 	prod_name prod_type prod_code prod_body} {
 
-    if {$transport ne "smtp"} {
+    if {[regexp {^(smtp|sms)$} $transport] == 0} {
 	log_msg "Invalid transport $transport.";
 	return;
     }
@@ -199,13 +196,22 @@ proc msgfilter_dispatch {transport flags recipients \
         set body $prod_body;
     } elseif {[string first $flags "S"] >= 0} {
         set subject $prod_name;
-        append body $prod_summary;
+        set body $prod_summary;
     } else {
         log_msg "Invalid flag $flags";
         return;
     }
 
-    msgfilter_smtp_send_txt $recipients $subject $body;
+    # Tue Sep 13 14:38:24 AST 2011 - I found that the "smtp" function works
+    # with the cel phones I am leaving the second (sms) option for the
+    # moment, just in case there are some services for which the tcllib
+    # function does not work.
+
+    if {$transport eq "smtp"} {
+        msgfilter_smtp_send_txt $recipients $subject $body;
+    } elseif {$transport eq "sms"} {
+	 msgfilter_sms_send_txt $recipients $subject $body;
+    }
 }
 
 # This function takes as input a flat db file, parses it, and lappends the
@@ -236,8 +242,38 @@ proc msgfilter_add_flat_file {file} {
 # Here recipients is a tcl list (that gets converted to a comma-separated
 # string).
 #
-
 proc msgfilter_smtp_send_txt {recipients subject body} {
+
+    global msgfilter;
+
+    set token [mime::initialize -canonical text/plain -string $body];
+
+    ::mime::setheader $token To [join $recipients ","];
+    ::mime::setheader $token Subject $subject;
+
+    set cmd [list smtp::sendmessage $token \
+	-originator $msgfilter(smtp,originator) \
+	-recipients [join $recipients ","] \
+	-servers $msgfilter(smtp,servers)];
+
+    set result [eval $cmd $msgfilter(smtp,options)];
+
+    mime::finalize $token;
+
+    if {[llength $result] == 0} {
+	set status 0;
+    } else {
+        set status 1;
+        foreach r $result {
+            exec logger -t $msgfilter(syslogid) -p $msgfilter(syslogpri) \
+                [join $r ":"];
+        }
+    }
+
+    return $status;
+}
+
+proc msgfilter_sms_send_txt {recipients subject body} {
 
     global msgfilter;
 
@@ -265,41 +301,6 @@ proc msgfilter_smtp_send_txt {recipients subject body} {
        exec logger -t $msgfilter(syslogid) -p $msgfilter(syslogpri) $errmsg;
     }
                 
-    return $status;
-}
-
-proc msgfilter_smtp_send_txt_old {recipients subject body} {
-#
-# For some reason this does not work for sms mesages - I believe
-# the reason is the mime encoding framework.
-#
-    global msgfilter;
-
-    set token [mime::initialize -canonical text/plain -encoding 7bit \
-	-string $body];
-
-    ::mime::setheader $token To [join $recipients ","];
-    ::mime::setheader $token Subject $subject;
-
-    set cmd [list smtp::sendmessage $token \
-	-originator $msgfilter(smtp,originator) \
-	-recipients [join $recipients ","] \
-	-servers $msgfilter(smtp,servers)];
-
-    set result [eval [concat $cmd $msgfilter(smtp,options)]];
-
-    mime::finalize $token;
-
-    if {[llength $result] == 0} {
-	set status 0;
-    } else {
-        set status 1;
-        foreach r $result {
-            exec logger -t $msgfilter(syslogid) -p $msgfilter(syslogpri) \
-                [join $r ":"];
-        }
-    }
-
     return $status;
 }
 
